# oya

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  notes.txt  oya.code-workspace  oya.cpp  todo.txt
.github/: copilot-instructions.md
configure/: CmakeLists.txt  configure.h.in
scenes/: scene1.scn  test.scn
shaders/: CMakeLists.txt  fragment.glsl  vertex.glsl
shaders/compiled/: polygon_vert.spv
shaders/source/: font.frag  font.vert  polygon.frag  polygon.vert
src/: CMakeLists.txt  CMakePresets.json  aabb.ixx  background_layer.ixx  camera.ixx  cleanup.ixx  copy_ifc.cmake  data_listener.ixx  data_trigger.ixx  data_trigger_stack.ixx  event.ixx  fbo.ixx  font_manager.ixx  frame_rate.ixx  geometry.ixx  geometry_buffer.ixx  geometry_renderer.ixx  gui_data.ixx  gui_layer.ixx  gui_theme.ixx  init.ixx  input_event.ixx  input_manager.ixx  key_event.ixx  keyboard.ixx  keyboard_data.ixx  layer.ixx  layer_stack.ixx  listener.ixx  main.cpp  mouse.ixx  mouse_data.ixx  mouse_event.ixx  node.ixx  outline.ixx  oya.cpp  persistent_data.ixx  polygon.ixx  polygon_utility.ixx  render.ixx  (+25 more)
